--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,10 @@
 				<input class="form-control" type="text" name="username" placeholder="username" required>
 			</div>
 			<div class="form-group">
-			<input class="form-control" type="password" name="password" placeholder="password" required>
+				<input class="form-control" type="password" name="password" placeholder="password" required>
+			</div>
+			<div class="form-group">
+				<input class="form-control" type="password" name="adminCode" placeholder="admin code">
 			</div>
 			<div class="form-group">
 				<button class="btn btn-lg btn-primary btn-block">Register!</button>
