add simple user profile functionality

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,5 @@
 <%- include("../partials/header") %>
 <% if(currentUser && currentUser.isAdmin) { %>
-	<h1>You're an Admin!</h1>
 <% } %>
 	<div class="row">
 		<div class="col-md-3">
@@ -19,7 +18,7 @@
 					<h4><a><%= campground.name %></a></h4>
 					<p><%= campground.description %></p>
 					<p>
-						<em>Submitted by: <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
+						<em>Submitted by: <a href="/users/<%=campground.author.id%>"><%= campground.author.username %></a>, <%= moment(campground.createdAt).fromNow() %></em>
 					</p>
 					<% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) {%>
 						<a class="btn btn-xs btn-warning" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
